--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,7 @@
 
 .h1 {
   font-size: 60px;
+  line-height: 60px;
 }
 
 .h2 {
@@ -58,6 +59,13 @@ a {
   opacity: 0.5;
 }
 
+@media (max-width:768px){
+  
+  .hero__background-decoration{
+    display: none;
+  }
+}
+
 /* Navigation wrapper + logo */
 .h-nav__wrapper {
   z-index: 999;
@@ -70,18 +78,29 @@ a {
 }
 
 .h-nav__logo {
-  margin-top: 53px;
-  margin-left: 110px;
-  margin-right: 520px;
-  padding: 0;
+    margin-top: 53px;
+    margin-right: 539px;
+    padding: 0;
+    margin-left: 110px;
 }
-
 .h-nav__logo-pic {
   width: 202px;
   height: 59px;
   object-fit: cover;
 }
 
+@media (max-width:768px)
+  {
+    .h-nav__logo-pic {
+      width: 174px;
+      height: 52px;
+    }
+    .h-nav__logo {
+      margin-top: 24px;
+      margin-left: 30px;
+      margin-right: 94px ;
+    }
+}
 /* Navigation menu */
 .h-nav__menu {
   display: flex;
@@ -89,17 +108,45 @@ a {
   margin-top: 69px;
   width: 720px;
   gap: 30px;
-  /* ??????? */
 }
-.h-nav__menu-link--decoration{
+@media (max-width:768px){
+  .h-nav__menu{
+    width: 768px;
+  }
+}
+@media (max-width:768px){
+  .h-nav__menu{
+    margin-top: 42px;
+    margin-right: 30px;
+    width: 440px;
+    height: 36px;
+  }
+}
+
+.h-nav__menu-text:hover{
+  opacity: 0.6;
+}
+
+.h-nav__menu-text{
   box-shadow: 0 2px 0 rgba(0, 0, 0, 0);
   transition: box-shadow 2s ease;
+  width: fit-content;
+  margin: 1px;
 }
 
-.h-nav__menu-link--decoration:hover{
+.h-nav__menu-text:hover{
   box-shadow: 0 2px 0 rgb(255, 255, 255);
 }
+@media (max-width:768px){
+  .h-nav__menu-text:hover{
+    box-shadow: 0 2px 0 rgb(255, 255, 255);
+  }
+}
 
+.h-nav__menu-text:active{
+  opacity: 1;
+
+}
 .h-nav__menu .h-nav__menu-item {
   width: 171px;
   height: 30px;
@@ -108,16 +155,36 @@ a {
 .h-nav__menu-item--white .h3 {
   color: white;
 }
-
+@media (max-width:768px){
+  .h-nav__menu-item--white .h3{
+    color: black;
+    font-size: 18px;
+    line-height: 24px;
+  }
+  
+}
 /* hero left and right  */
 .hero__right {
   width: 720px;
 }
-
+@media (max-width:768px){
+  .hero__right{
+  display: none;
+}
+}
+.hero__h1{
+  text-transform: none;
+}
 .hero__h1--margin {
-  margin-bottom: 40px;
-  margin-left: 130px;
-  margin-right: 90px;
+  margin-bottom: 228px;
+  margin-left: 190px;
+}
+.hero__h3--margin {
+  margin-bottom: 53px;
+  margin-left: 53px;
+  padding-left: 10px;
+  margin-right: 240px;
+  padding-right: 7px;
 }
 
 .hero__right {
@@ -141,5 +208,25 @@ a {
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
-  margin-top: 112px;
+}
+.hero__text-button-wrapper{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #68B738;
+  margin-left: -96px;
+  margin-top: -237px 
+}
+.hero__text-button{
+  padding: 14px 26px 14px 26px;
+  margin-left: 2px;
+  margin-right: 2px;
+  color: #fff;
+}
+.hero__text-button-wrapper:hover{
+  background-color: #5EAA2F;
+}
+.hero__text-button:active{
+  opacity: 0.3;
 }
